--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "@angular/platform-browser": "~7.0.0-rc.0",
     "@angular/platform-browser-dynamic": "~7.0.0-rc.0",
     "@angular/router": "~7.0.0-rc.0",
+    "@types/googlemaps": "^3.39.0",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "ng2-file-upload": "^1.4.0",
+    "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
